--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta content="this is not meant to be used with this url." property="og:description" />
     <meta content="https://www.google.com" property="og:url" />
     <meta content="https://embed.com/embedimage.png" property="og:image" />
-    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+    <meta content="#e63535" data-react-helmet="true" name="theme-color" />
 
     <meta http-equiv="refresh" content="0; url=https://www.google.com" />
   </head>
