--- a/slay/index.html
+++ b/slay/index.html
@@ -10,7 +10,7 @@
     <meta content="https://www.google.com/search?client=opera-gx&q=slayyyyyyy&sourceid=opera&ie=UTF-8&oe=UTF-8" property="og:url" />
     <meta content="https://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/nail-polish.png" property="og:image" />
     <meta content="#e635ce" data-react-helmet="true" name="theme-color" />
-    <meta http-equiv="refresh" content="0; url=https://www.google.com" />
+    <meta http-equiv="refresh" content="0; url=https://www.google.com/search?client=opera-gx&q=slayyyyyyy&sourceid=opera&ie=UTF-8&oe=UTF-8" />
   </head>
   <body>
   </body>
